--- a/src/stylesheets/screen.styl
+++ b/src/stylesheets/screen.styl
@@ -58,6 +58,7 @@ header {
     text-decoration: none;
   }
   #sections {
+    margin-bottom: 5px;
     border-bottom: 1px solid #ccc;
     background: #f1f1f1;
     box-shadow: rgba(black, 0.15) 0 0 5px;
