Lots of additions to the README and some style changes

--- a/src/stylesheets/screen.styl
+++ b/src/stylesheets/screen.styl
@@ -195,6 +195,8 @@ header {
   dfn { font-weight: bold; }
   pre, code { margin: 0 0 1.625em; white-space: pre; }
   pre, code, tt { font: 0.8em "Droid Sans Mono", Monaco, monospace; line-height: 1.5; } 
+  code { background: #f8f8ff; padding: 1px 2px; border: 1px solid #ddd; }
+  pre code {padding: 10px 12px;}
   tt { display: block; margin: 1.625em 0; }
   hr { margin-bottom:1.625em; }
 }
