--- a/src/stylesheets/screen.styl
+++ b/src/stylesheets/screen.styl
@@ -154,9 +154,9 @@ header {
 
   h1 { font-size: 2.125em; margin-bottom: 0.765em; }
   h2 { font-size: 1.7em;  margin: 0.855em 0; }
-  h3 { font-size: 1.5em;  margin: 0.956em 0; }
-  h4 { font-size: 1.2em;  margin: 1.161em 0; }
-  h5,h6 { font-size: 1.1em;  margin: 1.238em 0; }
+  h3 { font-size: 1.3em;  margin: 0.956em 0; }
+  h4 { font-size: 1.1em;  margin: 1.161em 0; }
+  h5,h6 { font-size: 1em; font-weight: bold;  margin: 1.238em 0; }
 
 
 
