[fixes #27] Added 100% as max-width for images even if not children of a paragraph

--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -157,7 +157,8 @@ a {
 
   p { padding:0 0 0.8125em 0; color:#111; font-weight:300; clearfix();}
 
-  p img       { float: left; margin: 0.5em 0.8125em 0.8125em 0; padding: 0; max-width: 100%; }
+  p img       { float: left; margin: 0.5em 0.8125em 0.8125em 0; padding: 0; }
+  img { max-width: 100%; }
 
 
   h1,h2,h3,h4,h5,h6 { font-weight:normal; color: #333; line-height: 1.2em; }
