Added GA config + favicon

--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -12,7 +12,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font: 18px/1.4em "Minion Pro", Times, "Times New Roman", serif;
+  font: 18px/1.4em Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
   font-size-adjust:none;
   font-style:normal;
   font-variant:normal;
@@ -104,6 +104,10 @@ a {
   }
   #travis {
     img {margin-top: 10px; display: block;}
+  }
+
+  > *:last-child {
+    margin-bottom: 20px;
   }
 }
 
