--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -240,7 +240,7 @@ a {
   }
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (max-width : 480px) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (max-width : 480px), only screen and (min--moz-device-pixel-ratio: 1.5) and (max-width : 480px) {
   #nav {
     position: static;
     width: 100%;
