--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -95,7 +95,7 @@ a{color:#369}
 #content th{background:#eee;padding:7px 10px}
 #content td{font-size:.9em;border-color:#ddd}
 #content tbody tr:nth-child(2n){background:#f5f5f5}
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (max-width : 480px){#nav{position:static;width:100%;height:auto;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;border-bottom:1px solid #aaa}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (max-width : 480px), only screen and (min--moz-device-pixel-ratio: 1.5) and (max-width : 480px){#nav{position:static;width:100%;height:auto;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;border-bottom:1px solid #aaa}
 #content{margin:0;padding:30px;position:relative}
 #github-ribbon img{width:100px}
 }
