--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -2,7 +2,7 @@
 
 @import "normalize";
 
-@import "github";
+@import "syntax/tomorrow";
 
 html {
   height: 100%;
@@ -183,7 +183,7 @@ a {
     font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
     line-height: 1.5;
   } 
-  code { background: #f8f8ff; padding: 1px 2px; border: 1px solid #ddd; }
+  code { background: #f7f8f1; padding: 1px 2px; border: 1px solid #CCCCCC; }
   pre code {padding: 10px 12px; word-wrap: normal; }
   tt { display: block; margin: 1.625em 0; }
   hr { margin-bottom:1.625em; }
