minor tweaks, pre code css was overflowing

--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -184,7 +184,7 @@ a {
     line-height: 1.5;
   } 
   code { background: #f7f8f1; padding: 1px 2px; border: 1px solid #CCCCCC; }
-  pre code {padding: 10px 12px; word-wrap: normal; }
+  pre code {padding: 10px 12px; word-wrap: normal; overflow-y: auto; }
   tt { display: block; margin: 1.625em 0; }
   hr { margin-bottom:1.625em; }
 
