--- a/app/stylesheets/themes/anne_veal.styl
+++ b/app/stylesheets/themes/anne_veal.styl
@@ -525,7 +525,7 @@ a {
     background: #f5f5f5
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (max-width : 480px) {
+@media only screen and (min-device-pixel-ratio: 1.5) and (max-width : 480px), only screen and (max-width : 480px) {
     #nav {
         position: static;
         width: 100%;
