applied fix from anne_veal to the base and legacy theme

--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -191,7 +191,7 @@
   }
 }
 
-@media only screen and (min-device-pixel-ratio: 1.5) and (max-width : 480px), only screen and (max-width : 480px) {
+@media only screen and (max-width : 480px) {
   #container {
     width: 100%;
   }
@@ -214,7 +214,8 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
-
+}
+@media only screen and (min-device-pixel-ratio: 1.5), only screen and (min-resolution : 1.5dppx){
   #github-ribbon {
     img {
       width: 100px;
