--- a/app/stylesheets/themes/v1.styl
+++ b/app/stylesheets/themes/v1.styl
@@ -239,7 +239,7 @@ a {
   }
 }
 
-@media only screen and (min-device-pixel-ratio: 1.5) and (max-width : 480px), only screen and (max-width : 480px) {
+@media only screen and (max-width : 480px) {
   #nav {
     position: static;
     width: 100%;
@@ -252,7 +252,9 @@ a {
     padding: 30px;
     position: relative;
   }
+}
 
+@media only screen and (min-device-pixel-ratio: 1.5), only screen and (min-resolution : 1.5dppx){
   #github-ribbon {
     img {
       width: 100px;
