--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -162,7 +162,7 @@
   pre, code { margin: 0 0 1.625em; white-space: pre; }
   pre, code, tt { 
     font-size: 1em;
-    font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
+    font-family: "Source Code Pro", monospace;
     line-height: 1.5;
   } 
   code { background: #f7f8f1; padding: 1px 2px; border: 1px solid #CCCCCC; }
