--- a/app/stylesheets/base.styl
+++ b/app/stylesheets/base.styl
@@ -8,7 +8,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font: 14px/22px "Josefin Slab", serif;
+  font: 14px/22px "Alegreya", serif;
   font-size-adjust:none;
   font-style:normal;
   font-variant:normal;
