--- a/app/stylesheets/screen.styl
+++ b/app/stylesheets/screen.styl
@@ -32,18 +32,16 @@
     font-weight: bold;
     text-decoration: none;
   }
-  #sections {
+  #sections > ul {
     list-style-type: none;
     border-bottom: 3px solid rgba(black, 0.1);
     padding-bottom: 10px;
     margin-bottom: 10px;
-    > li {
-      > a {
+    li {
+      a {
         padding: 5px 0;
         color: #444;
         font-size: 16px;
-      }
-      &:last-child {
       }
     }
     ul {
@@ -53,6 +51,7 @@
         a {
           padding: 1px 15px;
           font-size: 13px;
+          color: #369;
           font-weight: normal;
         }
       }
@@ -107,7 +106,7 @@
     font-size: 18px;
   }
 
-  > p { 
+  > p {
     clearfix()
   }
   p { padding:0 0 0.8125em 0; color:#444;}
@@ -127,7 +126,7 @@
   > h1, > h2 {margin-top: 0}
 
   ul{list-style-position:outside;}
-  li ul, 
+  li ul,
   li ol  { margin:0 1.625em;  }
   ul, ol { margin: 0 0 1.625em 1.25em; }
 
@@ -160,11 +159,11 @@
   em, dfn { font-style: italic; }
   dfn { font-weight: bold; }
   pre, code { margin: 0 0 1.625em; white-space: pre; }
-  pre, code, tt { 
+  pre, code, tt {
     font-size: 0.9em;
     font-family: "Source Code Pro", monospace;
     line-height: 1.5;
-  } 
+  }
   code { background: #f7f8f1; padding: 1px 2px; border: 1px solid #CCCCCC; }
   pre code {padding: 10px 12px; word-wrap: normal; overflow-y: auto; }
   tt { display: block; margin: 1.625em 0; }
