--- a/app/stylesheets/themes/v1.scss
+++ b/app/stylesheets/themes/v1.scss
@@ -1,6 +1,14 @@
 @import "../lib/normalize";
 @import "../syntax/tomorrow";
 
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
 html {
   height: 100%;
 }
