Fixing two bugs: - bad copy paste in the layout when changing from `current_repository.config` to `current_config` - Fix for repos with branches with slashes

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     = csrf_meta_tags
     - if current_config.color.present?
       css:
-        a {color: '#{current_repository.color}'}
+        a {color: '#{current_config.color}'}
 
   body
     = yield
