--- a/app/assets/stylesheets/themes/flatdoc.css.scss
+++ b/app/assets/stylesheets/themes/flatdoc.css.scss
@@ -706,69 +706,69 @@ a.big.button {
 //   }
 // }
 
-.highlight .pl-hll { background-color: #d6d6d6 }
-.highlight .pl-c { color: $grey * 1.2; } /* Comment */
-.highlight .pl-k { font-weight: bold; } /* Keyword */
-.highlight .pl-l { color: #33aacc } /* Literal */
-.highlight .pl-n { color: #4d4d4c } /* Name */
-.highlight .pl-o { color: #3e999f } /* Operator */
-.highlight .pl-p { color: #4d4d4c } /* Punctuation */
-.highlight .pl-cm { color: #8e908c } /* Comment.Multiline */
-.highlight .pl-cp { color: #8e908c } /* Comment.Preproc */
-.highlight .pl-c1 { color: #8e908c } /* Comment.Single */
-.highlight .pl-cs { color: #8e908c } /* Comment.Special */
-.highlight .pl-gd { color: #c82829 } /* Generic.Deleted */
-.highlight .pl-ge { font-style: italic } /* Generic.Emph */
-.highlight .pl-gh { color: #4d4d4c; font-weight: bold } /* Generic.Heading */
-.highlight .pl-gi { color: #718c00 } /* Generic.Inserted */
-.highlight .pl-gp { color: #8e908c; font-weight: bold } /* Generic.Prompt */
-.highlight .pl-gs { font-weight: bold } /* Generic.Strong */
-.highlight .pl-gu { color: #3e999f; font-weight: bold } /* Generic.Subheading */
-.highlight .pl-kc { color: #8959a8 } /* Keyword.Constant */
-.highlight .pl-kd { color: #8959a8 } /* Keyword.Declaration */
-.highlight .pl-kn { color: #3e999f } /* Keyword.Namespace */
-.highlight .pl-kp { color: #8959a8 } /* Keyword.Pseudo */
-.highlight .pl-kr { color: #8959a8 } /* Keyword.Reserved */
-.highlight .pl-kt { color: #eab700 } /* Keyword.Type */
-.highlight .pl-ld { color: #718c00 } /* Literal.Date */
-.highlight .pl-m { color: #33aacc } /* Literal.Number */
-.highlight .pl-s { color: #33aacc } /* Literal.String */
-.highlight .pl-na { color: #4271ae } /* Name.Attribute */
-.highlight .pl-nb { color: #4d4d4c } /* Name.Builtin */
-.highlight .pl-nc { color: #eab700 } /* Name.Class */
-.highlight .pl-no { color: #c82829 } /* Name.Constant */
-.highlight .pl-nd { color: #3e999f } /* Name.Decorator */
-.highlight .pl-ni { color: #4d4d4c } /* Name.Entity */
-.highlight .pl-ne { color: #c82829 } /* Name.Exception */
-.highlight .pl-nf { color: #4271ae } /* Name.Function */
-.highlight .pl-nl { color: #4d4d4c } /* Name.Label */
-.highlight .pl-nn { color: #eab700 } /* Name.Namespace */
-.highlight .pl-nx { color: #4271ae } /* Name.Other */
-.highlight .pl-py { color: #4d4d4c } /* Name.Property */
-.highlight .pl-nt { color: #3e999f } /* Name.Tag */
-.highlight .pl-nv { color: #c82829 } /* Name.Variable */
-.highlight .pl-ow { color: #3e999f } /* Operator.Word */
-.highlight .pl-w { color: #4d4d4c } /* Text.Whitespace */
-.highlight .pl-mf { color: #33aacc } /* Literal.Number.Float */
-.highlight .pl-mh { color: #33aacc } /* Literal.Number.Hex */
-.highlight .pl-mi { color: #33aacc } /* Literal.Number.Integer */
-.highlight .pl-mo { color: #33aacc } /* Literal.Number.Oct */
-.highlight .pl-sb { color: #33aacc } /* Literal.String.Backtick */
-.highlight .pl-sc { color: #4d4d4c } /* Literal.String.Char */
-.highlight .pl-sd { color: #8e908c } /* Literal.String.Doc */
-.highlight .pl-s2 { color: #33aacc } /* Literal.String.Double */
-.highlight .pl-se { color: #33aacc } /* Literal.String.Escape */
-.highlight .pl-sh { color: #33aacc } /* Literal.String.Heredoc */
-.highlight .pl-si { color: #33aacc } /* Literal.String.Interpol */
-.highlight .pl-sx { color: #33aacc } /* Literal.String.Other */
-.highlight .pl-sr { color: #33aacc } /* Literal.String.Regex */
-.highlight .pl-s1 { color: #33aacc } /* Literal.String.Single */
-.highlight .pl-ss { color: #33aacc } /* Literal.String.Symbol */
-.highlight .pl-bp { color: #4d4d4c } /* Name.Builtin.Pseudo */
-.highlight .pl-vc { color: #c82829 } /* Name.Variable.Class */
-.highlight .pl-vg { color: #c82829 } /* Name.Variable.Global */
-.highlight .pl-vi { color: #c82829 } /* Name.Variable.Instance */
-.highlight .pl-il { color: #33aacc } /* Literal.Number.Integer.Long */
+.highlight .hll { background-color: #d6d6d6 }
+.highlight .c { color: $grey * 1.2; } /* Comment */
+.highlight .k { font-weight: bold; } /* Keyword */
+.highlight .l { color: #33aacc } /* Literal */
+.highlight .n { color: #4d4d4c } /* Name */
+.highlight .o { color: #3e999f } /* Operator */
+.highlight .p { color: #4d4d4c } /* Punctuation */
+.highlight .cm { color: #8e908c } /* Comment.Multiline */
+.highlight .cp { color: #8e908c } /* Comment.Preproc */
+.highlight .c1 { color: #8e908c } /* Comment.Single */
+.highlight .cs { color: #8e908c } /* Comment.Special */
+.highlight .gd { color: #c82829 } /* Generic.Deleted */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gh { color: #4d4d4c; font-weight: bold } /* Generic.Heading */
+.highlight .gi { color: #718c00 } /* Generic.Inserted */
+.highlight .gp { color: #8e908c; font-weight: bold } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #3e999f; font-weight: bold } /* Generic.Subheading */
+.highlight .kc { color: #8959a8 } /* Keyword.Constant */
+.highlight .kd { color: #8959a8 } /* Keyword.Declaration */
+.highlight .kn { color: #3e999f } /* Keyword.Namespace */
+.highlight .kp { color: #8959a8 } /* Keyword.Pseudo */
+.highlight .kr { color: #8959a8 } /* Keyword.Reserved */
+.highlight .kt { color: #eab700 } /* Keyword.Type */
+.highlight .ld { color: #718c00 } /* Literal.Date */
+.highlight .m { color: #33aacc } /* Literal.Number */
+.highlight .s { color: #33aacc } /* Literal.String */
+.highlight .na { color: #4271ae } /* Name.Attribute */
+.highlight .nb { color: #4d4d4c } /* Name.Builtin */
+.highlight .nc { color: #eab700 } /* Name.Class */
+.highlight .no { color: #c82829 } /* Name.Constant */
+.highlight .nd { color: #3e999f } /* Name.Decorator */
+.highlight .ni { color: #4d4d4c } /* Name.Entity */
+.highlight .ne { color: #c82829 } /* Name.Exception */
+.highlight .nf { color: #4271ae } /* Name.Function */
+.highlight .nl { color: #4d4d4c } /* Name.Label */
+.highlight .nn { color: #eab700 } /* Name.Namespace */
+.highlight .nx { color: #4271ae } /* Name.Other */
+.highlight .py { color: #4d4d4c } /* Name.Property */
+.highlight .nt { color: #3e999f } /* Name.Tag */
+.highlight .nv { color: #c82829 } /* Name.Variable */
+.highlight .ow { color: #3e999f } /* Operator.Word */
+.highlight .w { color: #4d4d4c } /* Text.Whitespace */
+.highlight .mf { color: #33aacc } /* Literal.Number.Float */
+.highlight .mh { color: #33aacc } /* Literal.Number.Hex */
+.highlight .mi { color: #33aacc } /* Literal.Number.Integer */
+.highlight .mo { color: #33aacc } /* Literal.Number.Oct */
+.highlight .sb { color: #33aacc } /* Literal.String.Backtick */
+.highlight .sc { color: #4d4d4c } /* Literal.String.Char */
+.highlight .sd { color: #8e908c } /* Literal.String.Doc */
+.highlight .s2 { color: #33aacc } /* Literal.String.Double */
+.highlight .se { color: #33aacc } /* Literal.String.Escape */
+.highlight .sh { color: #33aacc } /* Literal.String.Heredoc */
+.highlight .si { color: #33aacc } /* Literal.String.Interpol */
+.highlight .sx { color: #33aacc } /* Literal.String.Other */
+.highlight .sr { color: #33aacc } /* Literal.String.Regex */
+.highlight .s1 { color: #33aacc } /* Literal.String.Single */
+.highlight .ss { color: #33aacc } /* Literal.String.Symbol */
+.highlight .bp { color: #4d4d4c } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #c82829 } /* Name.Variable.Class */
+.highlight .vg { color: #c82829 } /* Name.Variable.Global */
+.highlight .vi { color: #c82829 } /* Name.Variable.Instance */
+.highlight .il { color: #33aacc } /* Literal.Number.Integer.Long */
 
 // ----------------------------------------------------------------------------
 
